--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
 
     services:
       private-pypi:
-        image: privatepypi/private-pypi:0.1.0a17
+        image: privatepypi/private-pypi:0.2.0
         ports:
           - 8888:8888
         volumes:
