--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,24 @@
 [tool.poetry]
-name = "private-pypi"
+name = "pywharf"
 version = "0.2.0"
 description = "A private PyPI server powered by flexible backends."
 license = "MIT"
 authors = ["huntzhan <huntzhan.dev@gmail.com>"]
 readme = "README.md"
-repository = "https://github.com/private-pypi/private-pypi"
+repository = "https://github.com/pywharf/pywharf"
 keywords = ["private", "pypi", "packaging", "dependency"]
 classifiers = [
     "Topic :: Software Development :: Build Tools",
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 packages = [
-    { include = "private_pypi_bundles" },
+    { include = "pywharf_bundles" },
 ]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-private-pypi-core = "0.2.0"
-private-pypi-github = "0.2.0"
+pywharf-core = "0.2.0"
+pywharf-github = "0.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -27,7 +27,7 @@ pylint = "^2.4.4"
 twine = "^3.1.1"
 
 [tool.poetry.scripts]
-private_pypi = "private_pypi_bundles:main"
+pywharf = "pywharf_bundles:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
